
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned int RAND_MAX ;
 unsigned int* g_password ;
 int strlen (unsigned int*) ;

unsigned int getkey()
{
 int x, y;
 unsigned int z;

 y = strlen(g_password);
 if (!y)
  return 31337;
 else {
  z = 0;
  for (x = 0; x < y; x++)
  z+= g_password[x];

  for (x = 0; x < y; x++) {
   if (x%2)
    z-= g_password[x] * (y-x+1);
   else
    z+= g_password[x] * (y-x+1);
   z = z%RAND_MAX;
        }

  z = (z * y)%RAND_MAX;
      return z;
   }
}
